<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_gravity="center"
        android:weightSum="10"
        android:gravity="center"
        android:id="@+id/login_layout">

        <ImageView android:src="@mipmap/ic_launcher"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="8dp"
                   android:layout_weight="1"
                   android:layout_gravity="center_horizontal" />

        <!-- Username Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:textColorHint="#f5f5f5"
            android:layout_marginBottom="4dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:maxLines="1"
                android:textSize="14sp"
                android:hint="@string/username" />

        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:textColorHint="#FFF"
            android:layout_marginBottom="4dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:maxLines="1"
                android:textSize="16sp"
                android:hint="@string/password"/>

        </android.support.design.widget.TextInputLayout>


        <!-- button login -->
        <FrameLayout
            android:layout_width="match_parent"
            android:elevation="@dimen/elevation"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@drawable/button_bg"
                android:layout_gravity="center"
                android:text="@string/sign_in"/>

        </FrameLayout>

        <!-- button new user -->
        <FrameLayout
            android:layout_width="match_parent"
            android:elevation="@dimen/elevation"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:text="New User ?"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>
