<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/drawerLayout"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="@dimen/elevation"
                android:layout_gravity="top"
                app:contentInsetStart="16dp"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_below="@+id/appbar"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="@dimen/elevation"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/t_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_launcher"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:background="#d2000000"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:text="@string/profile" />

                        </LinearLayout>

                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="@dimen/elevation"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/t_study_material"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_launcher"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:background="#d2000000"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:text="@string/study_material"/>

                        </LinearLayout>

                    </LinearLayout>


                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="@dimen/elevation"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/t_attendance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:src="@mipmap/ic_launcher"
                        android:scaleType="centerCrop"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:background="#d2000000"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:text="@string/attendance"/>

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="@dimen/elevation"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/t_project"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_launcher"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:background="#d2000000"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:text="@string/project"/>

                        </LinearLayout>

                    </LinearLayout>


                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="@dimen/elevation"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/t_questions"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_launcher"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:background="#d2000000"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:text="@string/ques_bank"/>

                        </LinearLayout>

                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="@dimen/elevation"
                    android:orientation="vertical">

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>